# spectrum_unfolding

./: CMakeLists.txt  MultiUnfold.sln  ann.h  connection_ann.h  createTransfer.cpp  main.cpp  multiunfold.cpp  multiunfold.h  multiunfold.ui  net.cpp  net.h  neuron.cpp  neuron.h  psa_data.hpp  qcustomplot.cpp  simple_ann.cpp  simple_ann.h  simple_psd.cpp  simple_psd.h
MultiUnfold/: MultiUnfold.vcxproj  MultiUnfold.vcxproj.filters  multiunfold.h  multiunfold.qrc  net.cpp  neuron.cpp  qcustomplot.cpp  qcustomplot.h  trainingdata.cpp  trainingdata.h
MultiUnfold/Debug/MultiUnfold.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MultiUnfold.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MultiUnfold/GeneratedFiles/: qrc_multiunfold.cpp  ui_multiunfold.h
MultiUnfold/GeneratedFiles/Debug/: moc_multiunfold.cpp  moc_qcustomplot.cpp
trainsample/: data2.csv  out_xor.txt
